# oidc-saml-demo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  todo.txt
.github/workflows/: build.yml
src/: env.rs  main.rs  models.rs  state.rs  templates.rs  tracing.rs
src/routes/: four_oh_four.rs  index.rs  mod.rs
src/routes/oidc/: callback.rs  index.rs  login.rs  logout.rs  mod.rs
src/routes/saml/: acs.rs  login.rs  mod.rs  slo.rs
src/sso/: oidc.rs  saml.rs
templates/: logged-in.html  login.html
