[package]
name = "oidc-saml-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
askama = "0.12.1"
askama_axum = "0.4.0"
async-trait = "0.1.83"
axum = "0.7.9"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
jwks = "0.1.3"
reqwest = { version = "0.12.9", features = ["json"] }
samael = { version = "0.0.17", features = ["xmlsec"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tower-sessions = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
urlencoding = "2.1.3"
